css fix for views nav on ios unitToPixel function added to window object

--- a/src/ui/less/layout/views-nav.less
+++ b/src/ui/less/layout/views-nav.less
@@ -5,7 +5,7 @@
     display: flex;
     align-items: center;
     gap: 4px 8px;
-    bottom: 10px;
+    bottom: calc(10px + env(safe-area-inset-bottom));
     right: 10px;
     background: #fff;
     box-shadow: 0px 0px 10px rgba(110, 111, 114, 0.22);
